# personal-agent

./: .gitignore  LICENSE  README.md  flake.nix  ollama-open-webui.sh
calendar-agent/: flake.nix  pa.py  pyproject.toml
