[project]
name = "calendar-agent"
version = "0.1.0"
description = "Personal Assistant for handling calendar events"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "dataclasses>=0.8",
    "devtools>=0.12.2",
    "httpx>=0.27.2",
    "logfire>=2.11.0",
    "pydantic-ai>=0.0.15",
    "typing>=3.10.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
